test/frontend/fail/unsized_array.osl
shader foo() {
    float a[] = {1, 2, 3, 4};
}
